# belegradar

./: .gitattributes  .gitignore  README.md
.github/workflows/: release.yml  test.yml
extractor/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
extractor/belegradar/: __init__.py  extract.py  numbers.py  pdftext.py  providers.py  schema.py  validate.py
extractor/evals/: RESULTS.md  run_evals.py
extractor/samples/: 01_de_simple.json  02_de_7pct.json  03_de_mixed_rates.json  04_de_discount.json  05_de_kleinunternehmer.json  06_de_gutschrift.json  07_de_no_iban.json  08_at_20pct.json  09_en_nl_vat.json  10_en_uk.json  11_en_usd_novat.json  12_de_thousands.json  13_de_freelancer.json  14_en_fractions.json  15_de_utility.json  16_en_mixed.json  generate.py
extractor/tests/: test_extract_shaping.py  test_numbers.py  test_validate.py
web/: devserver.py  gen_sample_results.py  next.config.ts  package-lock.json  package.json  requirements.txt  tsconfig.tsbuildinfo
web/api/: extract.py
web/app/: BelegApp.tsx  ResultView.tsx  export.ts  globals.css  i18n.ts  layout.tsx  opengraph-image.tsx  page.tsx  samples.ts  types.ts
web/public/samples/: results.json
