[project]
name = "belegradar"
dynamic = ["version"]
description = "Invoice/receipt structured extraction with validation, built for the DACH market (VAT breakdown, IBAN checksum, USt-IdNr, paragraph 14 UStG check)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Nandor Nagy", email = "n3ndor@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "pypdf>=4.0",
]
keywords = ["invoice", "receipt", "extraction", "ocr", "vat", "mwst", "iban", "dach", "llm", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/n3ndor/belegradar"
Repository = "https://github.com/n3ndor/belegradar"
Changelog = "https://github.com/n3ndor/belegradar/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "belegradar/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
